--- a/Pipfile
+++ b/Pipfile
@@ -2,15 +2,16 @@
 python_version = "3.6"
 
 [packages]
-luigi = "*"
-jinja2 = "*"
-humanfriendly = "*"
-jsonpickle = "*"
-simplejson = "*"
-docker = "==3.7.2"
-netaddr = "*"
-click = "*"
-requests = "*"
-networkx = "*"
-pydot = "*"
-"stopwatch.py" = "*"
+luigi = ">=2.8.4"
+jinja2 = ">=2.10.1"
+humanfriendly = ">=4.18"
+jsonpickle = ">=1.1"
+simplejson = ">=3.16.0"
+docker = ">=4.0.0"
+netaddr = ">=0.7.19"
+click = ">=7.0"
+requests = ">=2.21.0"
+networkx = ">=2.3"
+pydot = ">=1.4.0"
+"stopwatch.py" = ">=1.0.0"
+gitpython= ">=2.1.0"
