save dockerfiles, image_info and packages in build_info directory in each image, because in case of a problems it would be difficult without the this information to identify which part was build when

--- a/exaslct_src/test/resources/test-flavor/flavor_base/build_run/Dockerfile
+++ b/exaslct_src/test/resources/test-flavor/flavor_base/build_run/Dockerfile
@@ -7,3 +7,4 @@ COPY --from={{build_deps}} /opt /opt
 COPY --from={{build_deps}} /etc /etc
 
 RUN mkdir /exaudf
+COPY --from={{build_deps}} /build_info /build_info
