--- a/exaslct_src/test/resources/test-flavor/flavor_base/release/Dockerfile
+++ b/exaslct_src/test/resources/test-flavor/flavor_base/release/Dockerfile
@@ -12,6 +12,5 @@ COPY --from={{flavor_customization}} /lib /lib
 COPY --from={{flavor_customization}} /bin /bin
 COPY --from={{flavor_customization}} /opt /opt
 COPY --from={{flavor_customization}} /etc /etc
-
-COPY --from={{build_run}} /exaudf /exaudf
-
+COPY --from={{flavor_customization}} /build_info /build_infoCOPY --from={{build_run}} /exaudf /exaudf
+COPY --from={{build_run}} /build_info /build_info
