--- a/flavors/fancyr-EXASOL-6.1.0/flavor_base/language_deps/Dockerfile
+++ b/flavors/fancyr-EXASOL-6.1.0/flavor_base/language_deps/Dockerfile
@@ -1,7 +1,7 @@
 FROM {{udfclient_deps}}
 
-RUN mkdir -p /packages
-COPY language_deps/packages /packages/language_deps
+RUN mkdir -p /build_info/packages
+COPY language_deps/packages /build_info/packages/language_deps
 
 # ppa:marutter/rrutter3.5 needed for R 3.5
 RUN apt-get update && \
@@ -9,7 +9,7 @@ RUN apt-get update && \
     gpg -a --export E298A3A825C0D65DFD57CBB651716619E084DAB9 | apt-key add -  && \
     add-apt-repository -y 'deb https://cloud.r-project.org/bin/linux/ubuntu bionic-cran35/' && \
     apt-get -y update && \
-    apt-get -y install $(cat /packages/language_deps/apt_get_packages) && \
+    apt-get -y install $(cat /build_info/packages/language_deps/apt_get_packages) && \
     locale-gen en_US.UTF-8 && \
     update-locale LC_ALL=en_US.UTF-8 && \
     apt-get -y clean && \
