--- a/flavors/python3-ds-EXASOL-6.0.0/flavor_base/build_deps/Dockerfile
+++ b/flavors/python3-ds-EXASOL-6.0.0/flavor_base/build_deps/Dockerfile
@@ -5,11 +5,11 @@ ENV ARCHIVE_UBUNTU_PREFIX=""
 RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1$ARCHIVE_UBUNTU_PREFIX\2/" /etc/apt/sources.list
 
 COPY 01_nodoc /etc/dpkg/dpkg.cfg.d/01_nodoc
-RUN mkdir -p /packages
-COPY build_deps/packages /packages/build_deps
+RUN mkdir -p /build_info/packages
+COPY build_deps/packages /build_info/packages/build_deps
 
 RUN apt-get -y update && \
-    apt-get install -y $(cat /packages/build_deps/apt_get_packages) && \
+    apt-get install -y $(cat /build_info/packages/build_deps/apt_get_packages) && \
 	echo "deb [arch=amd64] http://storage.googleapis.com/bazel-apt stable jdk1.8" | tee /etc/apt/sources.list.d/bazel.list && \
 	curl https://bazel.build/bazel-release.pub.gpg | apt-key add - && \
 	apt-get update && \
