--- a/flavors/python3-ds-EXASOL-6.1.0/flavor_base/flavor_test_build_run/Dockerfile
+++ b/flavors/python3-ds-EXASOL-6.1.0/flavor_base/flavor_test_build_run/Dockerfile
@@ -7,6 +7,7 @@ COPY --from={{flavor_customization}} /opt /opt
 COPY --from={{flavor_customization}} /lib /lib
 COPY --from={{flavor_customization}} /bin /bin
 COPY --from={{flavor_customization}} /etc /etc
+COPY --from={{flavor_customization}} /build_info /build_info
 
 RUN ldconfig
 
