--- a/flavors/standard-EXASOL-6.0.0/flavor_base/language_deps/Dockerfile
+++ b/flavors/standard-EXASOL-6.0.0/flavor_base/language_deps/Dockerfile
@@ -1,10 +1,10 @@
 FROM {{udfclient_deps}}
 
-RUN mkdir -p /packages
-COPY language_deps/packages /packages/language_deps
+RUN mkdir -p /build_info/packages
+COPY language_deps/packages /build_info/packages/language_deps
 
 RUN apt-get -y update && \
-    apt-get -y install $(cat /packages/language_deps/apt_get_packages) && \
+    apt-get -y install $(cat /build_info/packages/language_deps/apt_get_packages) && \
     locale-gen en_US.UTF-8 && \
     update-locale LC_ALL=en_US.UTF-8 && \
     apt-get -y clean && \
