fix copy statements in flavors

--- a/exaslct_src/test/resources/test-flavor/flavor_base/flavor_test_build_run/Dockerfile
+++ b/exaslct_src/test/resources/test-flavor/flavor_base/flavor_test_build_run/Dockerfile
@@ -7,4 +7,6 @@ COPY --from={{flavor_customization}} /opt /opt
 COPY --from={{flavor_customization}} /lib /lib
 COPY --from={{flavor_customization}} /bin /bin
 COPY --from={{flavor_customization}} /etc /etc
-COPY --from={{flavor_customization}} /build_info /build_infoRUN mkdir /exaudf
+COPY --from={{flavor_customization}} /build_info /build_info
+
+RUN mkdir /exaudf
