--- a/flavors/fancyr-EXASOL-6.1.0/flavor_base/release/Dockerfile
+++ b/flavors/fancyr-EXASOL-6.1.0/flavor_base/release/Dockerfile
@@ -13,7 +13,7 @@ COPY --from={{flavor_customization}} /lib /lib
 COPY --from={{flavor_customization}} /bin /bin
 COPY --from={{flavor_customization}} /opt /opt
 COPY --from={{flavor_customization}} /etc /etc
-COPY --from={{flavor_customization}} /build_info /build_infoCOPY --from={{flavor_customization}} /build_info /build_info
+COPY --from={{flavor_customization}} /build_info /build_info
 
 RUN ldconfig
 
