Add build information to docker images and final container and fix image deployment (#42)
Exaslct now adds build information to the docker images and the final container to easier trace down which image introduces a problem. For that, we include the following information into the images and the container:
- Configuration which was used to create the images and the container
- Dockerfiles of the images
- The package lists that each image installs

Additional minor changes:
- Set lower bounds for the version of the python packages in the Pipfile for exaslct
- Fix image deployment: now all images get deployed instead only the top-level images

--- a/exaslct_src/test/resources/test-flavor/flavor_base/release/Dockerfile
+++ b/exaslct_src/test/resources/test-flavor/flavor_base/release/Dockerfile
@@ -12,6 +12,7 @@ COPY --from={{flavor_customization}} /lib /lib
 COPY --from={{flavor_customization}} /bin /bin
 COPY --from={{flavor_customization}} /opt /opt
 COPY --from={{flavor_customization}} /etc /etc
+COPY --from={{flavor_customization}} /build_info /build_info
 
 COPY --from={{build_run}} /exaudf /exaudf
-
+COPY --from={{build_run}} /build_info /build_info
