--- a/flavors/standard-EXASOL-6.1.0/flavor_base/build_run/Dockerfile
+++ b/flavors/standard-EXASOL-6.1.0/flavor_base/build_run/Dockerfile
@@ -9,7 +9,7 @@ COPY --from={{build_deps}} /env /env
 
 RUN ldconfig
 
-RUN mkdir /exaudf_src /exaudf
+RUN mkdir /exaudf_src /exaudf /exaudf/src 
 COPY src/ /exaudf_src/
 
 #ENV VERBOSE_BUILD "--subcommands --verbose_failures"
@@ -17,5 +17,7 @@ COPY src/ /exaudf_src/
 WORKDIR /exaudf_src/
 RUN ["/bin/bash", "-c", "source /env && bash build.sh -c opt --define r=true --define python=true --define java=true //:exaudfclient //:exaudfclient_py3"]
 RUN cp -r -L bazel-bin/* /exaudf
+RUN cp debug_message.h exaudfclient.cc exaudflib/exaudflib.cc exaudflib/exaudflib.h exaudflib/zmqcontainer.proto /exaudf/src
+
 
 COPY --from={{build_deps}} /build_info /build_info
