--- a/flavors/standard-EXASOL-6.1.0/flavor_base/build_run/Dockerfile
+++ b/flavors/standard-EXASOL-6.1.0/flavor_base/build_run/Dockerfile
@@ -15,7 +15,11 @@ COPY src/ /exaudf_src/
 WORKDIR /exaudf_src/
 RUN ["/bin/bash", "-c", "source /env && bash build.sh --config no-tty --config optimize --config python --config java --config optimize-r --config fast-binary-both"]
 RUN cp -r -L bazel-bin/* /exaudf
+
+# These source files is required for the building of the protegrity client
 RUN cp debug_message.h exaudfclient.cc exaudflib/exaudflib.cc exaudflib/exaudflib.h exaudflib/zmqcontainer.proto /exaudf/src
 
+RUN ./test_udfclient.sh /exaudf/exaudfclient
+RUN ./test_udfclient.sh /exaudf/exaudfclient_py3
 
 COPY --from={{build_deps}} /build_info /build_info
