--- a/flavors/fancyr-EXASOL-6.0.0/flavor_base/build_run/Dockerfile
+++ b/flavors/fancyr-EXASOL-6.0.0/flavor_base/build_run/Dockerfile
@@ -15,7 +15,9 @@ COPY src/ /exaudf_src/
 #ENV VERBOSE_BUILD "--subcommands --verbose_failures"
 
 WORKDIR /exaudf_src/
-RUN ["/bin/bash", "-c", "source /env && bash build.sh --config no-tty --config optimize --config optimize-r --config fast-binary-py2t"]
+RUN ["/bin/bash", "-c", "source /env && bash build.sh --config no-tty --config optimize --config optimize-r --config fast-binary-py2"]
 RUN cp -r -L bazel-bin/* /exaudf
+
+RUN ./test_udfclient.sh /exaudf/exaudfclient
 
 COPY --from={{build_deps}} /build_info /build_info
