--- a/flavors/python3-ds-EXASOL-6.0.0/flavor_base/build_run/Dockerfile
+++ b/flavors/python3-ds-EXASOL-6.0.0/flavor_base/build_run/Dockerfile
@@ -18,4 +18,6 @@ WORKDIR /exaudf_src/
 RUN ["/bin/bash", "-c", "source /env && bash build.sh --config no-tty --config optimize --config python --config fast-binary-py3"]
 RUN cp -r -L bazel-bin/* /exaudf
 
+RUN ./test_udfclient.sh /exaudf/exaudfclient_py3
+
 COPY --from={{build_deps}} /build_info /build_info
