--- a/flavors/standard-EXASOL-6.0.0/flavor_base/build_run/Dockerfile
+++ b/flavors/standard-EXASOL-6.0.0/flavor_base/build_run/Dockerfile
@@ -17,6 +17,10 @@ ENV VERBOSE_BUILD "--subcommands --verbose_failures"
 WORKDIR /exaudf_src/
 RUN ["/bin/bash", "-c", "source /env && bash build.sh --config no-tty --config optimize --config python --config java --config optimize-r --config fast-binary-py2"]
 RUN cp -r -L bazel-bin/* /exaudf
+
+# These source files is required for the building of the protegrity client
 RUN cp debug_message.h exaudfclient.cc exaudflib/exaudflib.cc exaudflib/exaudflib.h exaudflib/zmqcontainer.proto /exaudf/src
+
+RUN ./test_udfclient.sh /exaudf/exaudfclient
 
 COPY --from={{build_deps}} /build_info /build_info
