--- a/src/python/python2/BUILD
+++ b/src/python/python2/BUILD
@@ -80,5 +80,5 @@ cc_library(
     data = [":extend_exascript_python_preset_py"], 
     hdrs = [":exascript_python_int", ":filter_swig_code_exascript_python_h"],
     include_prefix = ".",
-    deps = ["@python2//:python2",":exascript_python","//exaudflib:header", "//:debug_message_h"]
+    deps = ["@python2//:python2",":exascript_python","//exaudflib:header", "//:debug_message_h","//exaudflib:scriptoptionlines"]
 )
