--- a/src/benchmark_container/BUILD
+++ b/src/benchmark_container/BUILD
@@ -4,5 +4,5 @@ cc_library(
     name = "benchmark_container",
     srcs = ["benchmark_container.cc","benchmark_container.h"],
     hdrs = ["benchmark_container.h"],
-    deps = ["//exaudflib:exaudflib-deps","//exaudflib:header", "//:debug_message_h"]
+    deps = ["//exaudflib:exaudflib-deps","//exaudflib:header", "//:debug_message_h"]+["//exaudflib:scriptoptionlines"]
 )
