--- a/flavors/standard-EXASOL-6.0.0/flavor_base/base_test_build_run/Dockerfile
+++ b/flavors/standard-EXASOL-6.0.0/flavor_base/base_test_build_run/Dockerfile
@@ -12,11 +12,11 @@ RUN ldconfig
 RUN mkdir /exaudf_src /exaudf
 COPY src/ /exaudf_src/
 
-#ENV VERBOSE_BUILD "--subcommands --verbose_failures"
-
 WORKDIR /exaudf_src/
-RUN ["/bin/bash", "-c", "source /env && bash build.sh -c dbg --define r=true --define python=true --define java=true //:exaudfclient"]
+RUN ["/bin/bash", "-c", "source /env && bash build.sh --config no-tty -c dbg --config python --config java --config r --config slow-wrapper-py2"]
 RUN cp -r -L bazel-bin/* /exaudf
+
+RUN ./test_udfclient.sh /exaudf/exaudfclient.sh
 
 RUN mkdir /exasol_emulator
 COPY emulator/ /exasol_emulator
